[package]
name = "RustyCryptor-base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
block-modes = "0.9.1"
block-padding = "0.3.3"
hex = "0.4.3"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
rand = "0.8.5"
sha2 = "0.10.8"
