[package]
name = "corroded_cipher_base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = "0.5.2"
aes = "0.8.3"
aes-gcm = "0.10.3"
hmac = "0.12.1"
once_cell = "1.18.0"
openssl = "0.10.59"
pbkdf2 = "0.12.2"
rand = "0.8.5"
sha2 = "0.10.8"
